[package]
name = "plugin-host"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4.18"
strum_macros = "0.23.1"
wasmer = "4.2.6"
wasmer-wasix = "0.18.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros" ] }
byteorder = "1.5.0"
rkyv = { version = "0.7.44", features = ["validation", "bytecheck", "strict"] }
plugin-rpc = { path = "../rpc" }
